--- a/src/App.css
+++ b/src/App.css
@@ -2,19 +2,10 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
-  background-color: #282c34;
+  background-image: url(./img/background.jpg);
+  background-repeat: no-repeat;
+  background-size: 100%;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -23,16 +14,39 @@
   font-size: calc(10px + 2vmin);
   color: white;
 }
+/* .Form {
+  border: 2px solid black;
+  padding:50px 100px 50px 100px;
+  background-color: rgba(0, 0, 0, 0.493);
+  color: rgb(255, 255, 255);
+  box-shadow: 2px 5px 1px 1px black;
+  
+} */
+button {
+  background-color: rgb(137, 0, 250);
+  color: white;
+  margin-top: 50px;
+  padding: 5px 20px 5px 20px;
+  font-size: 20px;
+  font-weight: 700px;
 
-.App-link {
-  color: #61dafb;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.judul {
+  margin: 0px;
+  text-shadow: 2px 3px 5px 2px red;
+}
+input {
+  padding: 10px;
+  margin-top: 0px;
+}
+.email {
+  margin-top: 0px;
+  padding: 0px;
+}
+.eror {
+  color: red;
+  font-weight: bold;
+  font-size: 17px;
+  background-color: rgba(0, 0, 0, 0.418);
+  font-family: monospace;
 }
